# ReactOS-JPN-Package

./: .gitignore  .gitmodules  CMakeLists.txt  HowToBuild.txt  LICENSE.txt  MRegKey.hpp  README.md  README.txt  eng-locale.reg  font_setup.cpp  font_setup_res.rc  installer.iss  installerd.iss  jpn-data.cpp  jpn-data_res.rc  jpn-setup.cpp  jpn-setup_res.rc
font_setup/: CMakeLists.txt  MRegKey.hpp  font_setup.cpp
reg/: eng-locale.reg  jpn-locale.reg
